Prevent text wrap in votebar

--- a/src/components/question-bubble/question-bubble.scss
+++ b/src/components/question-bubble/question-bubble.scss
@@ -106,6 +106,9 @@ question-bubble {
       line-height: 49px;
       width: 45%;
       font-size: 80%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
 
       img { vertical-align: middle; }
     }
